test: B Swagger 최종 시나리오 완주